--- a/AlgorithmConsole/AlgorithmConsole/AlgorithmConsole.csproj
+++ b/AlgorithmConsole/AlgorithmConsole/AlgorithmConsole.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BubbleSort.cs" />
+    <Compile Include="InfoSysInterviewQ1.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="LeetCode.cs" />
     <Compile Include="Program.cs" />
